# loom

./: .gitignore  .rumdl.toml  AGENTS.md  README.md  justfile  loom-hooks.toml  loom-layout.kdl  loom.toml  prek.toml  pyproject.toml  roles.toml  start.sh  zensical.toml
.agents/roles/: loom-loop.md
design/: approval-queue-tui-implementation-guide.md  cli-design.md  commit-message-extraction.md  long-running-tasks.md  project-preferences.md  requests-and-routines.md  review-workflow.md  snapshot-testing.md  thread-claiming.md  thread-merge-policy.md  thread-names.md  tui-plan.md  workflow-optimization.md
docs/: index.md
docs/reference/: cli.md  data-model.md  long-running-tasks.md
roles/: loom-director.md  loom-manager.md  loom-reviewer.md  loom-worker.md
src/loom/: __main__.py  agent.py  agent_command_catalog.py  cli.py  config.py  doc_generation.py  duration.py  frontmatter.py  history.py  ids.py  lease.py  migration.py  models.py  prompting.py  repository.py  runtime.py  scheduler.py  services.py  soft_hooks.py  state.py  templates.py  tui.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_spawn_limits.py
tests/unit/: test_agent_command_catalog.py  test_config.py  test_models.py  test_review_workflow.py  test_routines.py  test_thread_ownership.py  test_tui.py  test_worktrees.py
