[project]
name = "agent-loom"
description = "A CLI tool where humans weave requirements and agents execute tasks."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "PyYAML >= 6.0",
  "loguru >= 0.7",
  "pydantic >= 2.0",
  "typer >= 0.15",
  "zendev",
]
dynamic = ["version"]

[project.scripts]
loom = "loom.cli:app"

[project.optional-dependencies]
tui = [
  "textual>=8.1.1",
]

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
]
docs = [
  "zensical >= 0.0.20",
]
test = [
  "mutmut>=3.5.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "syrupy >= 4.0",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.pytest]
addopts = ["-q", "-ra"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "C4",  # flake8-comprehensions
  "FA",  # flake8-future-annotations
  "PGH",  # pygrep-hooks
  "RUF",  # ruff-specific rules
  "YTT",  # flake8-2020
  # "D",    # pydocstyle
]
ignore = ["D100", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
zendev = { git = "https://github.com/zrr1999/zendev" }
